--- a/orders.html
+++ b/orders.html
@@ -154,32 +154,32 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <a href="/orders-details.html">#0132</a>
+                                        <a href="/orders-details.html"><strong>#0132</strong></a>
                                     </td>
                                     <td>24 November 2024</td>
                                     <td>Rp100.000</td>
                                     <td>
-                                        <span class="badge text-bg-warning">Waiting</span>
+                                        <span class="badge rounded-pill text-bg-info">Waiting</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="/orders-details.html">#05123</a>
+                                        <a href="/orders-details.html"><strong>#05123</strong></a>
                                     </td>
                                     <td>24 November 2024</td>
                                     <td>Rp100.000</td>
                                     <td>
-                                        <span class="badge text-bg-success">Sent</span>
+                                        <span class="badge rounded-pill text-bg-success">Sent</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="/orders-details.html">#0132</a>
+                                        <a href="/orders-details.html"><strong>#0132</strong></a>
                                     </td>
                                     <td>24 November 2024</td>
                                     <td>Rp100.000</td>
                                     <td>
-                                        <span class="badge text-bg-danger">Canceled</span>
+                                        <span class="badge rounded-pill text-bg-danger">Canceled</span>
                                     </td>
                                 </tr>
                             </tbody>
