--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,6 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <div class="container">
             <a class="navbar-brand" href="/index.html">Swift Cart</a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -94,7 +93,8 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <p><img src="http://placehold.co/50x50" alt=""><strong>Product Title</strong>
+                                        <p><img src="http://placehold.co/50x50" class="me-1" alt=""><strong>Product
+                                                Title</strong>
                                         </p>
                                     </td>
                                     <td class="text-center">
