--- a/orders-confirm.html
+++ b/orders-confirm.html
@@ -115,11 +115,11 @@
                                 <label for="">Notes</label>
                                 <textarea name="description" id="" cols="30" rows="5" class="form-control"></textarea>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group my-3">
                                 <label for="">Please upload the payment confirmation for your order in the shopping
                                     cart.
-                                </label>
-                                <input type="image" name="image">
+                                </label><br>
+                                <input type="file" name="image">
                             </div>
                         </div>
                         <div class="card-footer">
