--- a/checkout.html
+++ b/checkout.html
@@ -81,18 +81,18 @@
                     </div>
                     <div class="card-body">
                         <form action="">
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Nama</label>
                                 <input type="text" class="form-control" name="name"
                                     placeholder="Enter the recipient's name">
                                 <small class="form-text text-danger">Name must be filled in</small>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Address</label>
                                 <textarea class="form-control" name="address" cols="30" rows="5"></textarea>
                                 <small class="form-text text-danger">Address must be filled in</small>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Phone</label>
                                 <input type="text" class="form-control" name="name"
                                     placeholder="Enter the recipient's nunber">
