--- a/orders-confirm.html
+++ b/orders-confirm.html
@@ -99,23 +99,23 @@
                     </div>
                     <form action="">
                         <div class="card-body">
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Transaction</label>
                                 <input type="text" class="form-control" value="12345" readonly>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">From the account under the name of</label>
                                 <input type="text" class="form-control">
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">The total amount in your shopping cart is</label>
                                 <input type="number" class="form-control">
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Notes</label>
                                 <textarea name="description" id="" cols="30" rows="5" class="form-control"></textarea>
                             </div>
-                            <div class="form-group my-3">
+                            <div class="form-label my-3">
                                 <label for="">Please upload the payment confirmation for your order in the shopping
                                     cart.
                                 </label><br>
