--- a/register.html
+++ b/register.html
@@ -130,22 +130,22 @@
                     </div>
                     <div class="card-body">
                         <form action="">
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Name</label>
                                 <input type="text" class="form-control" required autofocus>
                                 <small class="form-text text-danger">Nama harus diisi</small>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">E-mail</label>
                                 <input type="email" class="form-control" required>
                                 <small class="form-text text-danger">E-mail harus diisi</small>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Password</label>
                                 <input type="password" class="form-control" required>
                                 <small class="form-text text-danger">Password harus diisi</small>
                             </div>
-                            <div class="form-group">
+                            <div class="form-label">
                                 <label for="">Confirm Password</label>
                                 <input type="password" class="form-control" required>
                                 <small class="form-text text-danger">Password harus sama</small>
