--- a/admin-users.html
+++ b/admin-users.html
@@ -37,7 +37,9 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown-1">
                             <a href="/admin-category.html" class="dropdown-item">Category</a>
                             <a href="/admin-product.html" class="dropdown-item">Product</a>
+                            <a href="/admin-users.html" class="dropdown-item">User</a>
                             <a href="/admin-order.html" class="dropdown-item">Order</a>
+                            <a href="/admin-users.html" class="dropdown-item">User</a>
                         </div>
                     </li>
                 </ul>
@@ -134,6 +136,15 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
