--- a/admin-users-form.html
+++ b/admin-users-form.html
@@ -77,63 +77,51 @@
             <div class="col-md-10 mx-auto">
                 <div class="card">
                     <div class="card-header">
-                        <span>User</span>
-                        <a href="/admin-users-form.html" class="btn btn-sm btn-secondary">Add</a>
-                        <div class="float-end">
-                            <form action="">
-                                <div class="input-group">
-                                    <input placeholder="Search" type="text"
-                                        class="form-control form-control-sm text-center">
-                                    <button class="btn btn-secondary btn-sm" type="submit">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                    <a href="" class="btn btn-secondary btn-sm">
-                                        <i class="fas fa-eraser"></i>
-                                    </a>
-                                </div>
-                            </form>
-                        </div>
+                        <span>Add User</span>
+
                     </div>
                     <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">User</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Role</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>
-                                        <p>
-                                            <img src="https://placehold.co/70x70" alt="">
-                                            Admin
-                                        </p>
-                                    </td>
-                                    <td>admin@mail.com</td>
-                                    <td>Admin</td>
-                                    <td>Active</td>
-                                    <td>
-                                        <form action="#">
-                                            <a href="">
-                                                <button class="btn btn-sm">
-                                                    <i class="fas fa-edit text-info"></i>
-                                                </button>
-                                            </a>
-                                            <button class="btn btn-sm" type="submit"
-                                                onclick="return confirm('Are you sure?')">
-                                                <i class="fas fa-trash text-danger"></i>
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <form action="">
+                            <div class="form-label">
+                                <label for="">Name</label>
+                                <input type="text" class="form-control" required autofocus>
+                                <small class="form-text text-danger">Nama harus diisi</small>
+                            </div>
+                            <div class="form-label">
+                                <label for="">E-mail</label>
+                                <input type="email" class="form-control" required>
+                                <small class="form-text text-danger">E-mail harus diisi</small>
+                            </div>
+                            <div class="form-label">
+                                <label for="">Password</label>
+                                <input type="password" class="form-control" required>
+                                <small class="form-text text-danger">Password harus diisi</small>
+                            </div>
+                            <div class="form-label">
+                                <label for="">Role</label>
+                                <select name="role" id="" class="form-control">
+                                    <option value="admin">Admin</option>
+                                    <option value="member">Member</option>
+                                </select>
+                            </div>
+                            <div class="form-label">
+                                <label for="">Status</label><br>
+                                <div class="form-check-inline form-check">
+                                    <input type="radio" class="form-check-input" value="1" name="status">
+                                    <label for="" class="form-check-label">Active</label>
+                                </div>
+                                <div class="form-check-inline form-check">
+                                    <input type="radio" class="form-check-input" value="1" name="status">
+                                    <label for="" class="form-check-label">Not Active</label>
+                                </div>
+                            </div>
+                            <div class="form-label">
+                                <label for="">Photo</label><br>
+                                <input type="file" name="photo" id="">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Register</button>
+
+                        </form>
                     </div>
                 </div>
             </div>
