--- a/admin-product.html
+++ b/admin-product.html
@@ -79,8 +79,8 @@
             <div class="col-md-10 mx-auto">
                 <div class="card">
                     <div class="card-header">
-                        <span>Category</span>
-                        <a href="/admin-category-form.html" class="btn btn-sm btn-secondary">Add</a>
+                        <span>Product</span>
+                        <a href="/admin-product-form.html" class="btn btn-sm btn-secondary">Add</a>
                         <div class="float-end">
                             <form action="">
                                 <div class="input-group">
@@ -101,34 +101,27 @@
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">Title</th>
-                                    <th scope="col">Slug</th>
+                                    <th scope="col">Product</th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Stock</th>
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Laptops</td>
-                                    <td>laptops</td>
                                     <td>
-                                        <form action="#">
-                                            <a href="">
-                                                <button class="btn btn-sm">
-                                                    <i class="fas fa-edit text-info"></i>
-                                                </button>
-                                            </a>
-                                            <button class="btn btn-sm" type="submit"
-                                                onclick="return confirm('Are you sure?')">
-                                                <i class="fas fa-trash text-danger"></i>
-                                            </button>
-                                        </form>
+                                        <p>
+                                            <img src="https://placehold.co/70x70" alt="">
+                                            Laptops Core I9 2021
+                                        </p>
                                     </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Handphones</td>
-                                    <td>handphones</td>
+                                    <td>
+                                        <span class="badge text-bg-primary"><i class="fas fa-tags"></i> Laptops</span>
+                                    </td>
+                                    <td>Rp100.000</td>
+                                    <td>Available</td>
                                     <td>
                                         <form action="#">
                                             <a href="">
