--- a/admin-order-detail.html
+++ b/admin-order-detail.html
@@ -76,77 +76,88 @@
     <main class="container">
         <div class="row">
             <div class="col-md-10 mx-auto">
-                <div class="card">
-                    <div class="card-header">
-                        <span>Product</span>
-                        <a href="/admin-product-form.html" class="btn btn-sm btn-secondary">Add</a>
-                        <div class="float-end">
-                            <form action="">
-                                <div class="input-group">
-                                    <input placeholder="Search" type="text"
-                                        class="form-control form-control-sm text-center">
-                                    <button class="btn btn-secondary btn-sm" type="submit">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                    <a href="" class="btn btn-secondary btn-sm">
-                                        <i class="fas fa-eraser"></i>
-                                    </a>
+                <div class="row mb-3">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-header">
+                                Detail Order #0123
+                                <div class="float-end">
+                                    <span class="badge rounded-pill text-bg-info">Waiting</span>
                                 </div>
-                            </form>
+                            </div>
+                            <div class="card-body">
+                                <p>Name: Xiao San</p>
+                                <p>Phone: 0813413</p>
+                                <p>Address: Jl. Medan</p>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Product</th>
+                                            <th class="text-center">Price</th>
+                                            <th class="text-center">Total</th>
+                                            <th class="text-center">Sub-Total</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <p><img src="http://placehold.co/50x50" class="me-2"
+                                                        alt=""><strong>Product
+                                                        Title</strong>
+                                                </p>
+                                            </td>
+                                            <td class="text-center">
+                                                Rp100.000
+                                            </td>
+                                            <td class="text-center">
+                                                1
+                                            </td>
+                                            <td class="text-center">Rp100.000</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td colspan="3"><strong>Total:</strong></td>
+                                            <td class="text-center"><strong>Rp100.000</strong></td>
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                            <div class="card-footer">
+                                <form action="">
+                                    <div class="input-group">
+                                        <select name="" id="" class="form-control">
+                                            <option value="waiting">Waiting</option>
+                                            <option value="paid">Paid</option>
+                                            <option value="delivered">Delivered</option>
+                                            <option value="canceled">Canceled</option>
+                                        </select>
+                                        <button class="btn btn-primary" type="submit">Save</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Product</th>
-                                    <th scope="col">Category</th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Stock</th>
-                                    <th scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>
-                                        <p>
-                                            <img src="https://placehold.co/70x70" alt="">
-                                            Laptops Core I9 2021
-                                        </p>
-                                    </td>
-                                    <td>
-                                        <span class="badge text-bg-primary"><i class="fas fa-tags"></i> Laptops</span>
-                                    </td>
-                                    <td>Rp100.000</td>
-                                    <td>Available</td>
-                                    <td>
-                                        <form action="#">
-                                            <a href="">
-                                                <button class="btn btn-sm">
-                                                    <i class="fas fa-edit text-info"></i>
-                                                </button>
-                                            </a>
-                                            <button class="btn btn-sm" type="submit"
-                                                onclick="return confirm('Are you sure?')">
-                                                <i class="fas fa-trash text-danger"></i>
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                            </ul>
-                        </nav>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-md-8">
+                        <div class="card">
+                            <div class="card-header">
+                                Transaction Receipt
+                            </div>
+                            <div class="card-body">
+                                <p> From the account: 0123</p>
+                                <p>c/o Kevin</p>
+                                <p>Amount: Rp900.000</p>
+                                <p>Notes: -</p>
+                            </div>
+                        </div>
                     </div>
+                    <div class="col-md-4">
+                        <img src="https://placehold.co/150x200" alt="">
+                    </div>
+
                 </div>
             </div>
         </div>
